--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -78,7 +78,7 @@
                         <div class="panel-body">
                             <ul class="nav nav-pills nav-stacked">
                                     <template repeat="{{p in d[2]}}" >
-                                        <li dimension="{{d[0]}}" on-click="{{valueClick}}" class="active" style="width: 250px">
+                                        <li dimension="{{d[0]}}" on-click="{{valueClick}}" class="active">
                                                 <span class="value-primary">{{p[0]}}</span><span class="badge badge-info">{{p[1]}}</span>
                                         </li>
                                     </template>
