--- a/web/polymer-elements/paper-action-dialog/paper-action-dialog.html
+++ b/web/polymer-elements/paper-action-dialog/paper-action-dialog.html
@@ -33,9 +33,9 @@ Example:
 @homepage github.io
 @status unstable
 -->
-<link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<link href="https://www.polymer-project.org/0.5/components/paper-dialog/paper-dialog-base.html" rel="import">
+<link href="paper-dialog-base.html" rel="import">
 
 <polymer-element name="paper-action-dialog" extends="paper-dialog-base" role="dialog" layout vertical>
 
