--- a/web/polymer-elements/paper-button/paper-button.html
+++ b/web/polymer-elements/paper-button/paper-button.html
@@ -1,10 +1,10 @@
 <html><head><style>template {display: none !important;} /* injected by platform.js */</style><style>body {transition: opacity ease-in 0.2s; }
 body[unresolved] {opacity: 0; display: block; overflow: hidden; }
-</style><link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
-    <link href="https://www.polymer-project.org/0.5/components/paper-shadow/paper-shadow.html" rel="import">
-    <link href="https://www.polymer-project.org/0.5/components/core-a11y-keys/core-a11y-keys.html" rel="import">
+</style><link rel="import" href="../../bower_components/polymer/polymer.html">
+    <link href="../paper-shadow/paper-shadow.html" rel="import">
+    <link href="core-a11y-keys.html" rel="import">
 
-    <link href="https://www.polymer-project.org/0.5/components/paper-button/paper-button-base.html" rel="import">
+    <link href="paper-button-base.html" rel="import">
 
     <style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none;}
     html /deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none;}
