--- a/web/polymer-elements/paper-icon-button/paper-icon-button.html
+++ b/web/polymer-elements/paper-icon-button/paper-icon-button.html
@@ -64,11 +64,11 @@ you should ensure that the `aria-label` attribute is set.
 @homepage github.io
 -->
 
-<link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-icon/core-icon.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-icons/core-icons.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/paper-button/paper-button-base.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/paper-ripple/paper-ripple.html" rel="import">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link href="../../bower_components/core-icon/core-icon.html" rel="import">
+<link href="../../bower_components/core-icons/core-icons.html" rel="import">
+<link href="../paper-button/paper-button-base.html" rel="import">
+<link href="../paper-tab/paper-ripple.html" rel="import">
 
 <polymer-element name="paper-icon-button" extends="paper-button-base" attributes="src icon" role="button">
 
