--- a/web/polymer-elements/paper-input-decorator/paper-input-decorator.html
+++ b/web/polymer-elements/paper-input-decorator/paper-input-decorator.html
@@ -2,11 +2,11 @@
 <!-- saved from url=(0085)https://www.polymer-project.org/0.5/components/paper-input/paper-input-decorator.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style>template {display: none !important;} /* injected by platform.js */</style><style>body {transition: opacity ease-in 0.2s; } 
 body[unresolved] {opacity: 0; display: block; overflow: hidden; } 
-</style><link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-icon/core-icon.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-icons/core-icons.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-input/core-input.html" rel="import">
-<link href="https://www.polymer-project.org/0.5/components/core-style/core-style.html" rel="import">
+</style><link rel="import" href="../../bower_components/polymer/polymer.html">
+<link href="../../bower_components/core-icon/core-icon.html" rel="import">
+<link href="../../bower_components/core-icons/core-icons.html" rel="import">
+<link href="core-input.html" rel="import">
+<link href="core-style.html" rel="import">
 
 <style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none;}
 html /deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none;}
