--- a/web/polymer-elements/paper-toggle-button/paper-toggle-button.html
+++ b/web/polymer-elements/paper-toggle-button/paper-toggle-button.html
@@ -57,8 +57,8 @@ To change the toggle bar and toggle button colors separately:
 @homepage github.io
 -->
 
-<link rel="import" href="https://www.polymer-project.org/0.5/components/paper-radio-button/paper-radio-button.html">
-<link rel="import" href="https://www.polymer-project.org/0.5/components/core-a11y-keys/core-a11y-keys.html">
+<link rel="import" href="../paper-button/paper-radio-button.html">
+<link rel="import" href="../paper-button/core-a11y-keys.html">
 
 <polymer-element name="paper-toggle-button" attributes="checked disabled" role="button" aria-pressed="false" tabindex="0">
     <template>
