--- a/web/dataset.html
+++ b/web/dataset.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Sefarad 2.0 | Add Dataset</title>
+    <title>Sefarad 2.0 | SPARQL Editor</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <link rel="icon" type="image/png" href="dist/img/favicon.png">
-
-    <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
-    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-
-    <link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
-    <!-- Dart Support -->
-    <script src="packages/web_components/dart_support.js"></script>
 
     <!-- ------------------------------- STYLE LINKS ZONE -------------------------------------- -->
 
@@ -20,6 +13,11 @@
 
 
     <!-- ------------------------------- end/ STYLE LINKS ZONE --------------------------------- -->
+
+    <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <!-- Dart Support -->
+    <script src="packages/web_components/dart_support.js"></script>
 
     <!-- Bootstrap 3.3.2 -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -30,13 +28,12 @@
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
     <link href="dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
-    <!-- AdminLTE Skins. Choose a skin from the css/skins 
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
     <!-- iCheck -->
     <link href="plugins/iCheck/flat/blue.css" rel="stylesheet" type="text/css"/>
     <!-- Own Css -->
-    <link href="newquery.css" rel="stylesheet" type="text/css"/>
     <link href="common.css" rel="stylesheet" type="text/css"/>
     <!-- Morris chart -->
     <link href="plugins/morris/morris.css" rel="stylesheet" type="text/css"/>
@@ -48,7 +45,6 @@
     <link href="plugins/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
     <!-- bootstrap wysihtml5 - text editor -->
     <link href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css"/>
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -67,11 +63,12 @@
 
     <!-- ------------------------------- POLYMER COMPONENTS IMPORT ZONE ------------------------ -->
 
-    <link href="polymer-elements/paper-input-decorator/paper-input-decorator.html" rel="import">
-    <link href="polymer-elements/paper-button/paper-button.html" rel="import">
     <link href="polymer-elements/paper-action-dialog/paper-action-dialog.html" rel="import">
+    <link href="polymer-elements/paper-button/paper-button.html" rel="import">
+    <link href="polymer-elements/paper-input-decorator/paper-input-decorator.html" rel="import">
 
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
+
 
 </head>
 <body class="skin-blue">
@@ -79,7 +76,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="dataset.html" class="logo"><b>Sefarad</b>-2.0</a>
+        <a href="queryeditor.html" class="logo"><b>Sefarad</b>-2.0</a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
@@ -97,26 +94,26 @@
                                 <span class="hidden-xs user-name"></span>
                             </div>
                         </a>
-                            <ul class="dropdown-menu">
-                                <!-- User image -->
-                                <li class="user-header user-div">
-                                    <img src="" class="img-circle user-image3" alt="User Image">
-                                    <p class="user-name3">
+                        <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header user-div">
+                                <img src="" class="img-circle user-image3" alt="User Image">
+                                <p class="user-name3">
 
-                                        <small>Member since Nov. 2012</small>
-                                    </p>
-                                </li>
-                                <!-- Menu Footer-->
-                                <li class="user-footer">
-                                    <div class="pull-right">
-                                        <button ng-click="logout()" class="btn btn-default btn-flat">Sign out</button>
-                                    </div>
-                                </li>
-                            </ul>
+                                    <small>Member since Nov. 2012</small>
+                                </p>
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-right">
+                                    <button ng-click="logout()" class="btn btn-default btn-flat">Sign out</button>
+                                </div>
+                            </li>
+                        </ul>
                     </li>
                     <li class="dropdown user user-menu sign">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Sign In
+                            Sign In
                         </a>
                         <ul class="dropdown-menu">
                             <li><div class="login-box-body">
@@ -148,7 +145,6 @@
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-
             <!-- Sidebar user panel -->
             <div class="user-side">
                 <div class="user-panel">
@@ -163,15 +159,15 @@
                 </div>
                 <!-- search form -->
                 <div class="sidebar-form">
-                <form action="#" method="get">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search..."/>
+                    <form action="#" method="get">
+                        <div class="input-group">
+                            <input type="text" name="q" class="form-control" placeholder="Search..."/>
                          <span class="input-group-btn">
                              <button type='submit' name='search' id='search-btn'
                                      class="btn btn-flat"><i class="fa fa-search"></i></button>
                          </span>
-                    </div>
-                </form>
+                        </div>
+                    </form>
                 </div>
                 <!-- /.search form -->
             </div>
@@ -188,14 +184,25 @@
 
                         <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
+                </li>
                 <li class="treeview active">
                     <a href="#">
-                        <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
+                        <i class="fa fa-database"></i> <span>Dataset</span><i class="fa fa-angle-left pull-right"></i>
+                    </a>
+                    <ul class="treeview-menu active">
+                        <li><a href="newdataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
+                        <li class="active"><a href="dataset.html"><i class="fa fa-circle-o"></i> Dataset List</a></li>
+                    </ul>
+                </li>
+
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-code"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
-                        <li><a href="query.html"><i class="fa fa-circle-o"></i> Query Editor</a></li>
                         <li><a href="newquery.html"><i class="fa fa-circle-o"></i> Add Query</a></li>
+                        <li><a href="query.html"><i class="fa fa-circle-o"></i> Query List</a></li>
+                        <li><a href="queryeditor.html"><i class="fa fa-circle-o"></i> Query Editor</a></li>
                     </ul>
                 </li>
 
@@ -209,8 +216,8 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1 horizontal layout>
-                Add Dataset
-                <small horizontal layout style="margin-top: 5px">Create your own dataset
+                Dataset
+                <small horizontal layout style="margin-top: 5px">List of datasets saved
 
                     <template is="auto-binding">
 
@@ -219,19 +226,16 @@
                             <button class="fa fa-question-circle">
                             </button>
 
-                            <paper-action-dialog class="size-position" style="height: 320px" backdrop autoCloseDisabled layered="false">
-                                <h3>Add Dataset</h3>
-                                <ol>
-                                    <li> Give it a name </li>
-                                    <br>
-                                    <li> Define your type of dataset (Sparql or MongoDb)</li>
-                                    <br>
-                                    <li> Write the web service endpoint </li>
-                                    <br>
-                                    <li> Save it*</li>
+                            <paper-action-dialog class="size-position" backdrop autoCloseDisabled layered="false">
+                                <h3>Sparql Editor</h3>
+                                <br>
+                                <ol style="font-size: 0.92em">
+                                    <li> Choose a query template in the list </li><br>
+                                    <li> If you have created a parameters list, select values on it </li><br>
+                                    <li> Press "Execute Query" button</li><br>
+                                    <li> If an error occurs, check the query syntax</li><br>
+                                    <li> Below appears the results of data retrieved</li><br>
                                 </ol>
-
-                                <h5>*If an error occurs saving data, check chose type of dataset</h5>
                                 <paper-button affirmative autofocus>Tap me to close</paper-button>
                             </paper-action-dialog>
 
@@ -241,64 +245,48 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"> Home</a></li>
-                <li class="active"><i class="fa fa-cogs"></i>    Dataset</li>
+                <li class="active"><i class="fa fa-database"></i>    Dataset List</li>
             </ol>
         </section>
 
         <!-- Main content -->
         <section class="content">
 
-            <div id="queries">
+            <div class="box box-pane-right box-solid">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Datasets</h3>
+                    <div class="box-tools pull-right">
+                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                    </div><!-- /.box-tools -->
+                </div><!-- /.box-header -->
+                <div class="box-body" style="display: block;">
+                    <div ng-repeat="dataset in datasets" ng-value="dataset.Name" style="margin-bottom: 10px;">
+                        <b>{{dataset.Name}}</b>
 
-                <paper-input-decorator label="Name of dataset"
-                                       class="custom" floatingLabel>
-                    <input is="core-input" id="queryNameSelector" ng-model="name">
-                </paper-input-decorator>
+                        <div class="box-tools pull-right">
+                            <button class="btn btn-box-tool" ng-click="view($index)"><i class="ion ion-eye"></i></button>
+                            <button class="btn btn-box-tool" ng-click="browse($index)"><i class="ion ion-android-globe"></i></button>
+                            <button class="btn btn-box-tool" style="display: none" ng-click="save($index)"><i class="fa fa-save"></i></button>
+                            <button class="btn btn-box-tool" ng-click="edit($index)"><i class="ion ion-android-create"></i></button>
+                            <button class="btn btn-box-tool" ng-click="remove($index)"><i class="ion ion-android-delete"></i></button>
+                        </div>
+                    </div>
+                </div><!-- /.box-body -->
+            </div>
 
-                <br>
-                <p class="text-light-blue">Choose a type of dataset:</p>
-                <select id="typeSelector" class="form-control" ng-change="checkType()" ng-model="type">
-                    <option style="display:none" value="">Select a type</option>
-                    <option selected>Sparql</option>
-                    <option>MongoDb</option>
-                </select>
+            <div class="alert alert-danger alert-dismissable hide" id="saveError">
+                <i class="fa fa-ban"></i>
 
-                <div id="loginUser" style="display: none;" horizontal layout>
-                    <paper-input-decorator style="width: 35%; margin-right: 20px" label="User" class="custom"l>
-                        <input is="core-input" id="userInput" ng-model="user">
-                    </paper-input-decorator>
-                    <paper-input-decorator style="width: 35%;" label="Password" class="custom" >
-                        <input is="core-input" type="password" ng-model="password">
-                    </paper-input-decorator>
-                </div>
+                <b>Save failed</b>
+            </div>
 
-                <br>
-                <paper-input-decorator id="collectionSec" style="display: none; margin-top: -15px"
-                                       label="Name of collection" class="custom" floatingLabel>
-                    <input is="core-input" id="collectionInput" ng-model="collection">
-                </paper-input-decorator>
-                <br>
-                <paper-input-decorator style="margin-top: -15px" label="Endpoint URL" class="custom" floatingLabel>
-                    <input is="core-input" id="endPointInput" ng-model="endPoint">
-                </paper-input-decorator>
+            <div class="alert alert-success alert-dismissable hide" id="saveSuccess">
+                <i class="fa fa-check"></i>
 
-                <br>
-                <div class="alert alert-danger alert-dismissable hide" id="saveError">
-                    <i class="fa fa-ban"></i>
-
-                    <b>Save failed</b>
-                </div>
-
-                <div class="alert alert-success alert-dismissable hide" id="saveSuccess">
-                    <i class="fa fa-check"></i>
-
-                    <b>Saved successfully</b>
-                </div>
-                <div class="save_btnGroup">
-                    <paper-button raised class="colored" id="btn_save" ng-click="saveData()">Save</paper-button>
-                    <paper-button raised class="colored" id="btn_clear" ng-click="clearFilters()">Clear</paper-button>
-                </div>
-
+                <b>Saved successfully</b>
+            </div>
+            <div class="save_btnGroup">
+                <paper-button raised class="colored" id="btn_save" ng-click="saveData()">Save</paper-button>
             </div>
 
         </section>
@@ -309,6 +297,7 @@
         <div class="pull-right hidden-xs">
             <b>Version</b> 2.0
         </div>
+
         <strong>Powered by <a href="https://github.com/gsi-upm/Sefarad-2.0">Sefarad 2.0</a>
             @<a href="http://www.gsi.dit.upm.es/">Grupo de Sistemas Inteligentes</a></strong>
         - Universidad Politécnica de Madrid.
@@ -359,22 +348,6 @@
 
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js" type="text/javascript"></script>
-<script type="text/javascript">
 
-    var scope = document.querySelector('template[is=auto-binding]');
-
-    scope.toggleDialog1 = function(e) {
-        if (e.target.localName != 'button') {
-            return;
-        }
-        var d = e.target.nextElementSibling;
-        if (!d) {
-            return;
-        }
-        d.toggle();
-    };
-
-
-</script>
 </body>
 </html>
