--- a/web/polymer-elements/paper-shadow/paper-shadow.html
+++ b/web/polymer-elements/paper-shadow/paper-shadow.html
@@ -24,7 +24,7 @@ Example:
 -->
 
 
-<link href="https://www.polymer-project.org/0.5/components/paper-shadow/paper-shadow.css" rel="stylesheet" shim-shadowdom>
+<link href="paper-shadow.css" rel="stylesheet" shim-shadowdom>
 
 <polymer-element name="paper-shadow">
 
