- Number chart on top - Google Youtube Polymer added - Home web created - Paper-fab added

--- a/web/polymer-elements/heat-map/heat-map.html
+++ b/web/polymer-elements/heat-map/heat-map.html
@@ -14,7 +14,7 @@
     </template>
 
     <script>
-        Polymer({
+        Polymer('heat-map',{
 
             crossfilterObject: {},
             chart: {},
