--- a/web/polymer-elements/number-chart/number-chart.html
+++ b/web/polymer-elements/number-chart/number-chart.html
@@ -29,7 +29,7 @@
   </template>
 
     <script>
-        Polymer({
+        Polymer('number-chart',{
             applyAuthorStyles: true,
             crossfilterObject: {},
             chart: {},
