--- a/web/polymer-elements/review-widget/review-widget.html
+++ b/web/polymer-elements/review-widget/review-widget.html
@@ -21,7 +21,7 @@
     </template>
 
     <script>
-        Polymer({
+        Polymer('review-widget',{
 
             crossfilterObject: {},
             chart: {},
