--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -7,6 +7,14 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <link rel="icon" type="image/png" href="dist/img/favicon.png">
 
+    <!-- ------------------------------- STYLE LINKS ZONE -------------------------------------- -->
+
+    <link href='//cdn.jsdelivr.net/yasqe/2.3.8/yasqe.min.css' rel='stylesheet' type='text/css'/>
+    <link href='//cdn.jsdelivr.net/yasr/2.4.12/yasr.min.css' rel='stylesheet' type='text/css'/>
+
+
+    <!-- ------------------------------- end/ STYLE LINKS ZONE --------------------------------- -->
+
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
@@ -83,23 +91,25 @@
     <link rel="import" href="polymer-elements/leaflet-marker-map/leaflet-marker-map.html">
     <link rel="import" href="polymer-elements/review-widget/review-widget.html">
     <link rel="import" href="polymer-elements/paper-tab/paper-tabs.html">
+    <link rel="import" href="bower_components/core-pages/core-pages.html">
 
 
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 </head>
-<body demo="places" class="skin-green sidebar-collapse sidebar-open">
+<body demo="places" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
-        <!-- Logo -->
-        <a href="dashboardPlaces.html" class="logo"><b>TourPedia</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
+
+            <!-- Logo -->
+            <a href="dashboardPlaces.html" class="logo"><b>TourPedia</b></a>
 
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
@@ -246,16 +256,16 @@
     <!-- Right side column. Contains the navbar and content of the page -->
     <div class="content-wrapper">
         <paper-shadow class="card" z="2">
-        <div class="top">
+            <div class="top">
 
-            <paper-tabs selected="0">
+                <paper-tabs selected="1">
 
-                <paper-tab>Dashboard</paper-tab>
-                <paper-tab>Query Editor</paper-tab>
+                    <paper-tab>QUERY EDITOR</paper-tab>
+                    <paper-tab>DASHBOARD</paper-tab>
 
-            </paper-tabs>
+                </paper-tabs>
 
-        </div>
+            </div>
         </paper-shadow>
         <!-- Content Header (Page header) -->
         <section class="content-header">
@@ -269,14 +279,71 @@
             </ol>
         </section>
 
-        <!-- Main content -->
-        <section class="content">
-            <!-- Small boxes (Stat box) -->
+        <core-pages selected="1">
+            <div id="content1">
+                <section class="content">
 
-            <!-- Small boxes (Stat box) -->
+                    <div id="queries">
+                        <br>
 
-            <div class="row">
-                <div class="col-lg-9 col-xs-6">
+                        <p class="text-light-blue">Select a query template:</p>
+                        <select style="width: 65%;" class="form-control" id="querySelector">
+                            <option ng-repeat="query in querys" ng-value="query.Name">{{query.Name}}</option>
+                        </select>
+                        <br>
+                        <p class="text-light-blue">Select parameters to fill the template:</p>
+                        <div id="paramSelector0"></div>
+                        <div id="paramSelector1"></div>
+                        <div id="paramSelector2"></div>
+                        <div id="paramSelector3"></div>
+                        <div id="paramSelector4"></div>
+                        <br>
+
+                        <p class="text-light-blue">Edit your query:</p>
+
+                        <div id="divSparql">
+                            <paper-shadow class="card" z="2">
+                                <div id="yasqe" style="padding-bottom: 15px"></div>
+                            </paper-shadow>
+                            <br>
+
+                            <a class="btn btn-app center-block" id="queryButton">
+                                <i class="fa fa-play"></i> Execute Query
+                            </a>
+                            <a class="btn btn-app center-block" id="buttonSave2" ng-click="saveResults()" style="display: none;">
+                                <i class="fa fa-save"></i> Save Results
+                            </a>
+
+                            <div class="alert alert-danger alert-dismissable hide" id="queryError">
+                                <i class="fa fa-ban"></i>
+
+                                <b>Query failed</b>
+                            </div>
+
+                            <div class="alert alert-success alert-dismissable hide" id="querySuccess">
+                                <i class="fa fa-check"></i>
+
+                                <b>Query success</b>
+                            </div>
+
+                            <paper-shadow class="card" z="2">
+                                <div id="yasr"></div>
+                            </paper-shadow>
+                        </div>
+                    </div>
+
+                </section>
+            </div>
+
+            <div id="content0">
+             <!-- Main content -->
+            <section class="content">
+                <!-- Small boxes (Stat box) -->
+
+                <!-- Small boxes (Stat box) -->
+
+                <div class="row">
+                    <div class="col-lg-9 col-xs-6">
 
                     <!-- leaflet-marker-map -->
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
@@ -385,7 +452,7 @@
                             <h3 class="box-title" id="here">Category</h3>
                         </div>
                         <!-- box-body -->
-                        <div class="box-body chart-responsive">
+                        <div class="box-body chart-responsive" style="overflow: hidden">
                             <pie-chart param="category" class="dc-element"></pie-chart>
                         </div>
                         <!-- /.box-body -->
@@ -402,7 +469,7 @@
                             <h3 class="box-title" id="here">City</h3>
                         </div>
                         <!-- box-body -->
-                        <div class="box-body chart-responsive">
+                        <div class="box-body chart-responsive" style="overflow: hidden">
                             <pie-chart param="location" class="dc-element"></pie-chart>
                         </div>
                         <!-- /.box-body -->
@@ -443,7 +510,7 @@
                         <h3 class="box-title">Polarity</h3>
                     </div>
                     <!-- box-body -->
-                    <div class="box-body chart-responsive">
+                    <div class="box-body chart-responsive" style="overflow: hidden">
                         <bubble-chart param="polarity" xMax=10 yMax=20000 radius=10000 class="dc-element"></bubble-chart>
                     </div>
                     <!-- /.box-body -->
@@ -470,7 +537,7 @@
                             </div>
                         </div>
                         <!-- box-body -->
-                        <div class="box-body chart-responsive">
+                        <div class="box-body chart-responsive" style="overflow: hidden">
                             <review-widget class="dc-element"></review-widget>
                             <div class="clearfix"></div>
                         </div>
@@ -521,7 +588,9 @@
 
                 </div><!-- ./col -->
             </div>
-        </section>
+            </section>
+            </div>
+        </core-pages>
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
@@ -608,8 +677,199 @@
 <script src="//datatables.net/release-datatables/media/js/jquery.dataTables.js" type="text/javascript"></script>
 <script src="plugins/datatables/dataTables.bootstrap.js" type="text/javascript"></script>
 
+<script src='//cdn.jsdelivr.net/yasqe/2.3.8/yasqe.bundled.min.js'></script>
+<script src='//cdn.jsdelivr.net/yasr/2.4.12/yasr.bundled.min.js'></script>
+<script src='plugins/papaparse/papaparse.min.js'></script>
 
 <script src="controller.js"></script>
+
+<script>
+    var tabs = document.querySelector('paper-tabs');
+    var pages = document.querySelector('core-pages');
+
+    tabs.addEventListener('core-select',function(){
+        pages.selected = tabs.selected;
+    });
+
+    var _editorEndpoint = 'http://tour-pedia.org/sparql?query=';
+    var myEl2 = document.getElementById('querySelector');
+    var regex = /<(\S+)>/g;
+    var parsedData = [];
+    $.getJSON("queries.json", function (data) {
+
+        for(i = 0; i < data.length; i++){
+            if(data[i]["Endpoint"] == "http://tour-pedia.org/sparql?query=") {
+                parsedData.push(data[i]);
+            }
+        }
+    });
+    window.onload = function() {
+        if(parsedData[0] != undefined ) {
+            var match = parsedData[0]["Name"].match(regex);
+            var query = parsedData[0]["Query"];
+            if(parsedData[0]["Endpoint"] != "")
+                _editorEndpoint = parsedData[0]["Endpoint"];
+            var k = 0;
+            for(k = 0; k < 5; k++) {
+                $("#paramSelector"+k).empty();
+                if(parsedData[0]["Parameters"+k].length != 0) {
+                    var id = "selector"+k;
+                    $("#paramSelector"+k).append("<select style='width: 65%;' class=form-control id=" + id + ">");
+                    for (var i = 0; i < parsedData[0]["Parameters"+k].length; i++) {
+                        $("#selector"+k).append('<option style="width: 65%; font-weight: bold;" value="' + parsedData[0]["Parameters"+k][i] + '"><strong>' + parsedData[0]["Parameters"+k][i] + "</strong></option>");
+                    }
+                    var selectedParameters = document.getElementById("selector"+k).value;
+                    query = query.replace(match[k], selectedParameters);
+                    match[k] = selectedParameters;
+                    $("#selector"+k).change(function () {
+                        var regex2 = /selector(\S+)/i;
+                        var index = this.id.match(regex2);
+                        var selectedParameters = this.value;
+                        query = query.replace(match[index[1]], selectedParameters);
+                        match[index[1]] = selectedParameters;
+                        if(parsedData[0]["Type"] == "Sparql")
+                            yasqe.setValue(query);
+                        else
+                            $("#queryMongo").val(query);
+                    });
+                }
+            }
+
+            if(parsedData[0]["Type"] == "Sparql")
+                yasqe.setValue(query);
+            else
+                $("#queryMongo").val(query);
+            return;
+        }
+    };
+
+    //configuration
+    var yasqe = YASQE(document.getElementById("yasqe"), {
+        sparql: {
+            showQueryButton: false,
+            callbacks:{
+                success: function(data){
+                    console.log("success", data);
+                }
+            },
+            createShareLink: false
+        }
+    });
+    //    var yasgui = function (){
+    //        var yasqe = YASQE(document.getElementById("yasqe"));
+    //        this.setValue = function (value){
+    //            yasqe.setValue(value);
+    //        }
+    //    }
+    YASR.plugins.table.defaults.datatable.scrollX = true;
+    YASR.plugins.table.defaults.datatable.scrollCollapse = true;
+    YASR.plugins.table.defaults.datatable.autoWidth = true;
+    YASR.plugins.table.defaults.datatable.scrollY = "300px";
+    YASR.plugins.rawResponse.defaults.scrollbarStyle = "native";
+    var yasr = YASR(document.getElementById("yasr"), {
+        //this way, the URLs in the results are prettified using the defined prefixes in the query
+        getUsedPrefixes: yasqe.getPrefixesFromQuery
+    });
+
+    $("#queryButton").click(function (e) {
+        e.preventDefault();
+        executeQuery();
+    });
+
+    //ExecuteQuery function. Still not generalized, it takes "restaurants" info from our endpoint at gsi's alpha
+    function executeQuery() {
+
+        $("#querySuccess").addClass("hide");
+        $("#queryError").addClass("hide");
+
+        var _query = yasqe.getValue().replace(/(\r\n|\n|\r)/gm, "");
+        console.log(_query);
+        var temporal = _editorEndpoint + encodeURIComponent(_query);
+        var req = new XMLHttpRequest();
+        req.open("GET", temporal, true);
+        var params = encodeURIComponent(_query);
+        req.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        req.setRequestHeader("Accept", "application/sparql-results+json");
+        req.send();
+        req.onreadystatechange = function () {
+            if (req.readyState == 4) {
+                if (req.status == 200) {
+
+                    var res = eval("(" + req.responseText + ")");
+                    var data = JSON.stringify(res.results.bindings);
+                    console.log(data);
+                    $("#querySuccess").removeClass('hide');
+
+                    document.getElementById("buttonSave2").style.display = "block";
+                    //ko.mapping.fromJSON(data, vm.viewData);
+                    //updateWidgets(true);
+                    $("#hiddenResults").val(data);
+                    yasr.setResponse({
+                        response: res,
+                        contentType: req.getResponseHeader("Content-Type")
+                    });
+
+                } else {
+                    $("#queryError").removeClass('hide');
+
+                }
+            }
+        };
+        return false;
+    };
+
+    function populateQueryWithParams(){
+        // update param list
+        var j;
+        for(j = 0; j<myEl2.length; j++){
+            if(parsedData[j] != undefined ) {
+                if (myEl2.value == parsedData[j]["Name"]) {
+
+                    var match = parsedData[j]["Name"].match(regex);
+                    var query = parsedData[j]["Query"];
+                    if(parsedData[j]["Endpoint"] != "")
+                        _editorEndpoint = parsedData[j]["Endpoint"];
+                    var k = 0;
+                    for(k = 0; k < 5; k++) {
+                        $("#paramSelector"+k).empty();
+                        if(parsedData[j]["Parameters"+k].length != 0) {
+                            var id = "selector"+k;
+                            $("#paramSelector"+k).append("<select style='width: 65%;' class=form-control id=" + id + ">");
+                            for (var i = 0; i < parsedData[j]["Parameters"+k].length; i++) {
+                                $("#selector"+k).append('<option style="width: 65%; font-weight: bold;" value="' + parsedData[j]["Parameters"+k][i] + '"><strong>' + parsedData[j]["Parameters"+k][i] + "</strong></option>");
+                            }
+                            var selectedParameters = document.getElementById("selector"+k).value;
+                            query = query.replace(match[k], selectedParameters);
+                            match[k] = selectedParameters;
+                            $("#selector"+k).change(function () {
+                                var regex2 = /selector(\S+)/i;
+                                var index = this.id.match(regex2);
+                                var selectedParameters = this.value;
+                                query = query.replace(match[index[1]], selectedParameters);
+                                match[index[1]] = selectedParameters;
+                                if(parsedData[j]["Type"] == "Sparql")
+                                    yasqe.setValue(query);
+                                else
+                                    $("#queryMongo").val(query);
+                            });
+                        }
+                    }
+
+                    if(parsedData[j]["Type"] == "Sparql")
+                        yasqe.setValue(query);
+                    else
+                        $("#queryMongo").val(query);
+                    return;
+                }
+            }
+        }
+    }
+
+    $("#querySelector").change(function () {
+        populateQueryWithParams();
+    });
+
+</script>
 
 </body>
 </html>
