--- a/web/dataset.html
+++ b/web/dataset.html
@@ -75,14 +75,15 @@
 <div class="wrapper">
 
     <paper-shadow class="card" z="2"><header class="main-header">
-        <!-- Logo -->
-        <a href="queryeditor.html" class="logo"><b>Sefarad</b>-2.0</a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
+
+            <!-- Logo -->
+            <a href="dataset.html" class="logo"><b>Sefarad</b>-2.0</a>
 
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
