--- a/web/polymer-elements/bar-chart/bar-chart.html
+++ b/web/polymer-elements/bar-chart/bar-chart.html
@@ -11,7 +11,7 @@
   </template>
 
     <script>
-        Polymer({
+        Polymer('bar-chart',{
 
             crossfilterObject: {},
             chart: {},
