--- a/web/polymer-elements/bubble-chart/bubble-chart.html
+++ b/web/polymer-elements/bubble-chart/bubble-chart.html
@@ -11,7 +11,7 @@
   </template>
 
     <script>
-        Polymer({
+        Polymer('bubble-chart',{
 
             crossfilterObject: {},
             chart: {},
