- Google-Signin Component created

--- a/web/polymer-elements/google-youtube-api/google-youtube.html
+++ b/web/polymer-elements/google-youtube-api/google-youtube.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="core-localstorage.html">
-<link rel="import" href="google-youtube-api.html">
+<link rel="import" href="../../bower_components/core-localstorage/core-localstorage.html">
+<link rel="import" href="../../bower_components/google-apis/google-youtube-api.html">
 
 <!--
 `google-youtube` encapsulates the YouTube player into a web component.
