--- a/web/home.html
+++ b/web/home.html
@@ -11,12 +11,14 @@
     <!-- FontAwesome 4.3.0 -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
           type="text/css"/>
+    <link rel="import" href="bower_components/webcomponentsjs/webcomponents.min.js">
     <link rel="import" href="polymer-elements/google-youtube-api/google-youtube.html">
     <link rel="import" href="polymer-elements/paper-fab/paper-fab.html">
+    <link rel="import" href="polymer-elements/google-signin/google-signin.html">
     <link href="bower_components/core-icons/core-icons.html" rel="import">
 </head>
 
-<body>
+<body unresolved>
 <div class="details js-details -hide">
     <div class="details__dismiss js-scrim-dismiss-main">&nbsp;</div>
     <div class="details__card js-details-card">&nbsp;</div>
@@ -66,7 +68,8 @@
             </nav>
 
             <div style="position: absolute; right: 0; margin: 29px 42px 0">
-                <a class="nav__item -desktop -logo" href="">Sign In</a>
+                <google-signin clientId="675126827387-jrvg34sf52dni2o8o5kjgthc3abm8s0u.apps.googleusercontent.com"
+                               scopes="https://www.googleapis.com/auth/drive.appfolder"></google-signin>
             </div>
         </header>
 
@@ -306,8 +309,6 @@
         s.parentNode.insertBefore(po, s);
     })();
 </script>
-
-<script src="https://www.google.com/events/io/js/partials.min.js"></script><iframe name="oauth2relay424513133" id="oauth2relay424513133" src="https://accounts.google.com/o/oauth2/postmessageRelay?parent=https%3A%2F%2Fwww.google.com#rpctoken=904176252&amp;forcesecure=1" tabindex="-1" style="width: 1px; height: 1px; position: absolute; top: -100px;"></iframe><div class="hud-renderer" style="overflow: hidden; -webkit-transform-style: preserve-3d; transform-style: preserve-3d; width: 103px; height: 103px; position: absolute; right: 0px; bottom: 0px; -webkit-perspective: 124.331998462214px; perspective: 124.331998462214px;"><div style="-webkit-transform-style: preserve-3d; transform-style: preserve-3d; width: 103px; height: 103px; -webkit-transform: translate3d(0px, 0px, 124.331998462214px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0, -182, 1) translate3d(51.5px, 51.5px, 0px); transform: translate3d(0px, 0px, 124.331998462214px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0, -182, 1) translate3d(51.5px, 51.5px, 0px);"><svg class="entity" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" width="40.5" height="80" viewBox="0 0 28 56" style="display: block; overflow: hidden; width: 40.5px; height: 80px; position: absolute; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; -webkit-transform: translate3d(-50%, -50%, 0px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, -20, 0, 0, 1); transform: translate3d(-50%, -50%, 0px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, -20, 0, 0, 1);"><circle cx="28" cy="28" r="28" fill="#c0c0c0"></circle></svg><svg class="entity" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" width="40.5" height="80" viewBox="028 0 28 56" style="display: block; overflow: hidden; width: 40.5px; height: 80px; position: absolute; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; -webkit-transform: translate3d(-50%, -50%, 0px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 20, 0, 0, 1); transform: translate3d(-50%, -50%, 0px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 20, 0, 0, 1);"><circle cx="28" cy="28" r="28" fill="#c0c0c0"></circle></svg></div></div>
 
 </body>
 </html>
